cabal-version:      2.4
name:               stubs-translator
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Stubs Language and Crucible Translation

-- A longer description of the package.
description: AST and translation into Crucible for the Stubs language

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-translator

-- category:
extra-source-files: CHANGELOG.md


common shared
    build-depends:
        async >= 2 && < 3,
        base >= 4.10 && < 5,
        bytestring,
        bv-sized,
        containers,
        exceptions,
        filepath,
        Glob,
        lens >= 4 && < 6,
        mtl >= 2 && < 3,
        panic >= 0.4 && < 0.5,
        parameterized-utils >= 2 && < 3,
        prettyprinter >= 1.7 && < 1.8,
        prettyprinter-ansi-terminal,
        text

library
    import: shared
    exposed-modules: Stubs.AST,
                     Stubs.Arch.X86,
                     Stubs.Arch.AArch32,
                     Stubs.Arch.PPC32,
                     Stubs.Arch.PPC64,
                     Stubs.Translate,
                     Stubs.Translate.Core,
                     Stubs.Translate.Intrinsic,
                     Stubs.Preamble,
                     Stubs.Opaque
    other-modules:  Stubs.Preamble.Common
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends: stubs-common,
                   what4,
                   crucible,
                   crucible-syntax,
                   macaw-base,
                   binary-symbols,
                   macaw-loader,
                   nonempty-vector,
                   parameterized-utils,
                   crucible-llvm,
                   split,
                   macaw-symbolic,
                   IntervalMap,
                   macaw-x86-symbolic,
                   macaw-x86,
                   macaw-aarch32,
                   macaw-aarch32-symbolic,
                   semmc-aarch32,
                   macaw-ppc,
                   macaw-ppc-symbolic

test-suite translator-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends: stubs-common,
                 stubs-translator,
                 crucible,
                 crucible-syntax,
                 macaw-base,
                 macaw-symbolic,
                 crucible-llvm,
                 what4,
                 directory,
                 tasty,
                 tasty-ant-xml,
                 tasty-expected-failure,
                 tasty-hunit,
                 yaml >= 0.11 && < 0.12,
                 macaw-x86,
                 macaw-x86-symbolic
  ghc-options: -Wextra -Wcompat
  default-language: Haskell2010
