cabal-version:      2.4
name:               stubs-translator
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Stubs Language and Crucible Translation

-- A longer description of the package.
description: AST and translation into Crucible for the Stubs language

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-translator

-- category:
extra-source-files: CHANGELOG.md


common shared
    build-depends:
        base >= 4.10 && < 5,
        parameterized-utils >= 2 && < 3

library
    import: shared
    exposed-modules: Stubs.AST,
                     Stubs.Arch.X86,
                     Stubs.Arch.AArch32,
                     Stubs.Arch.PPC32,
                     Stubs.Arch.PPC64,
                     Stubs.Translate,
                     Stubs.Translate.Core,
                     Stubs.Translate.Intrinsic,
                     Stubs.Preamble,
                     Stubs.Opaque
    other-modules:  Stubs.Preamble.Common
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends: containers,
                   exceptions,
                   mtl >= 2 && < 3,
                   text,

                   stubs-common,
                   what4,
                   crucible,
                   crucible-syntax,
                   macaw-base,
                   parameterized-utils,
                   crucible-llvm,
                   macaw-symbolic,
                   macaw-x86-symbolic,
                   macaw-x86,
                   macaw-aarch32-symbolic,
                   semmc-aarch32,
                   macaw-ppc,
                   macaw-ppc-symbolic

test-suite translator-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends: stubs-translator,
                 crucible,
                 macaw-base,
                 tasty,
                 tasty-hunit,
                 macaw-x86,
                 macaw-x86-symbolic
  ghc-options: -Wextra -Wcompat
  default-language: Haskell2010
