cabal-version:      2.4
name:               stubs-translator
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Stubs Language and Crucible Translation

-- A longer description of the package.
description: AST and translation into Crucible for the Stubs language

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-translator

-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Stubs.AST,
                     Stubs.Translate,
                     Stubs.Translate.Core,
                     Stubs.Translate.Intrinsic,
                     Stubs.Preamble,
                     Stubs.Preamble.Common,
                     Stubs.Opaque
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends: base >= 4.10 && < 5,
                   containers,
                   exceptions,
                   mtl >= 2 && < 3,
                   text,

                   stubs-common,
                   what4,
                   crucible,
                   crucible-syntax,
                   macaw-base,
                   parameterized-utils >= 2 && < 3,
                   crucible-llvm,
                   macaw-symbolic
