cabal-version:      2.4
name:               stubs-wrapper
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-wrapper

-- category:
extra-source-files: CHANGELOG.md

common shared
    build-depends:
        async >= 2 && < 3,
        base >= 4.10 && < 5,
        bytestring,
        bv-sized,
        containers,
        exceptions,
        filepath,
        Glob,
        lens >= 4 && < 6,
        lumberjack >= 1 && < 1.1,
        megaparsec >= 7 && < 10,
        mtl >= 2 && < 3,
        panic >= 0.4 && < 0.5,
        parameterized-utils >= 2 && < 3,
        parser-combinators >= 1.2 && < 1.4,
        prettyprinter >= 1.7 && < 1.8,
        prettyprinter-ansi-terminal,
        yaml >= 0.11 && < 0.12,
        text,
        template-haskell

library
    import: shared
    exposed-modules: Stubs.Wrapper,
                     Stubs.Wrapper.Exception
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends: stubs-common,
                   stubs-translator,
                   what4,
                   crucible,
                   crucible-syntax,
                   macaw-base,
                   binary-symbols,
                   macaw-loader,
                   nonempty-vector,
                   parameterized-utils,
                   crucible-llvm,
                   split,
                   macaw-symbolic,
                   IntervalMap,
                   macaw-x86-symbolic,
                   macaw-x86,
                   macaw-aarch32,
                   macaw-aarch32-symbolic,
                   semmc-aarch32
