cabal-version:      2.4
name:               stubs-wrapper
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-wrapper

extra-doc-files: CHANGELOG.md

common shared
    build-depends:
        base >= 4.10 && < 5,
        containers,
        exceptions,
        filepath,
        parameterized-utils >= 2 && < 3,
        text

library
    import: shared
    exposed-modules: Stubs.Wrapper,
                     Stubs.Wrapper.Exception
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends: stubs-common,
                   stubs-translator,
                   what4,
                   crucible,
                   crucible-syntax,
                   macaw-base,
                   parameterized-utils,
                   macaw-symbolic
